--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,7 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    Welcome to JS!!
+    <h1>Function</h1>
+    <p>
+      Function is a section of the reuseable code that Declear once,use it when
+      ever you want. call the function to execute the code.
+    </p>
   </body>
   <script src="script.js"></script>
 </html>
