--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,11 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Function</h1>
-    <p>
-      Function is a section of the reuseable code that Declear once,use it when
-      ever you want. call the function to execute the code.
-    </p>
+    <h1>Array</h1>
+    <p>An array is a special variable, which can hold more than one value</p>
   </body>
   <script src="script.js"></script>
 </html>
