--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,8 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Array</h1>
-    <p>An array is a special variable, which can hold more than one value</p>
+    <h1>Callback</h1>
+    <p>
+      A callback is a function passed as an argument to another function This
+      technique allows a function to call another function A callback function
+      can run after another function has finished
+    </p>
   </body>
   <script src="script.js"></script>
 </html>
