--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Callback</h1>
+    <h1>ForEach</h1>
     <p>
       A callback is a function passed as an argument to another function This
       technique allows a function to call another function A callback function
