--- a/js_foundation.html
+++ b/js_foundation.html
@@ -8,9 +8,8 @@
   <body>
     <h1>ForEach</h1>
     <p>
-      A callback is a function passed as an argument to another function This
-      technique allows a function to call another function A callback function
-      can run after another function has finished
+      Method used to iterate over the elements of an array and apply a specified
+      fun tion to each element.
     </p>
   </body>
   <script src="script.js"></script>
