--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,6 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    Welcome to JS!!
+    <h1>Map method</h1>
+    <p>
+      The map() method of Array instances creates a new array populated with the
+      results of calling a provided function on every element in the calling
+      array.
+    </p>
   </body>
+  <script src="script.js"></script>
 </html>
