--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,11 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Map method</h1>
+    <h1>expression function</h1>
     <p>
-      The map() method of Array instances creates a new array populated with the
-      results of calling a provided function on every element in the calling
-      array.
+      expression function is the way to define functions as values or variable
     </p>
   </body>
   <script src="script.js"></script>
