--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,10 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>expression function</h1>
+    <h1>Arrow Functions</h1>
     <p>
-      expression function is the way to define functions as values or variable
+      An arrow function expression is a compact alternative to a traditional
+      function expression
     </p>
   </body>
+
   <script src="script.js"></script>
 </html>
