--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,10 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Arrow Functions</h1>
+    <h1>Contructor</h1>
     <p>
-      An arrow function expression is a compact alternative to a traditional
-      function expression
+      The constructor method is a special method of a class for creating and
+      initializing an object instance of that class.
     </p>
   </body>
 
