--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,10 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Contructor</h1>
+    <h1>Class</h1>
     <p>
-      The constructor method is a special method of a class for creating and
-      initializing an object instance of that class.
+      Classes are a template for creating objects. They encapsulate data with
+      code to work on that data. Classes in JS are built on prototypes but also
+      have some syntax and semantics that are unique to classes.
     </p>
   </body>
 
