--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,11 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Class</h1>
+    <h1>Destructuring</h1>
     <p>
-      Classes are a template for creating objects. They encapsulate data with
-      code to work on that data. Classes in JS are built on prototypes but also
-      have some syntax and semantics that are unique to classes.
+      Destructuring is a JavaScript feature that allows you to extract values
+      from arrays or objects and assign them to variables.
     </p>
   </body>
 
