--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,11 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Destructuring</h1>
-    <p>
-      Destructuring is a JavaScript feature that allows you to extract values
-      from arrays or objects and assign them to variables.
-    </p>
+    <h1>Nested Object</h1>
+    <p>Nested object is an object that contains another object as a value.</p>
   </body>
 
   <script src="script.js"></script>
