--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,8 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Nested Object</h1>
-    <p>Nested object is an object that contains another object as a value.</p>
+    <h1>Array of Object</h1>
+    <p>
+      Array of object is a collection of objects. Each object is a key value
+      pair that is stored in an array.
+    </p>
   </body>
 
   <script src="script.js"></script>
