--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,12 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Array of Object</h1>
+    <h1>Es6 modules</h1>
     <p>
-      Array of object is a collection of objects. Each object is a key value
-      pair that is stored in an array.
+      ES6 modules are a new way to import and export code in JavaScript. They
+      are designed to make JavaScript more modular and easier to maintain.
     </p>
   </body>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </html>
