--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,12 +6,13 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Es6 modules</h1>
+    <h1>asynchronous</h1>
     <p>
-      ES6 modules are a new way to import and export code in JavaScript. They
-      are designed to make JavaScript more modular and easier to maintain.
+      asynchronous is a way to do something at the same time as something else
+      in the background without blocking the main thread of the program or
+      causing it to hang for a long time. It use with promises and async/await.
     </p>
   </body>
 
-  <script type="module" src="script.js"></script>
+  <script src="script.js"></script>
 </html>
