--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,11 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>asynchronous</h1>
+    <h1>promises</h1>
     <p>
-      asynchronous is a way to do something at the same time as something else
-      in the background without blocking the main thread of the program or
-      causing it to hang for a long time. It use with promises and async/await.
+      Promises are a JavaScript object for asynchronous operation. They let you
+      handle the success or failure of an asynchronous operation.
     </p>
   </body>
 
