--- a/js_foundation.html
+++ b/js_foundation.html
@@ -11,6 +11,7 @@
       Promises are a JavaScript object for asynchronous operation. They let you
       handle the success or failure of an asynchronous operation.
     </p>
+    <p id="demo">some</p>
   </body>
 
   <script src="script.js"></script>
