--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,10 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>promises</h1>
+    <h1 id="title">DOM</h1>
+    <h2 id="sub-title">Welcome to Dom</h2>
     <p>
-      Promises are a JavaScript object for asynchronous operation. They let you
-      handle the success or failure of an asynchronous operation.
+      DOM is a programming interface for HTML and XML documents. It represents
+      the document as objects, that act as the building blocks of the document
     </p>
     <p id="demo">some</p>
   </body>
