--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,12 +6,15 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 id="title">DOM</h1>
-    <h2 id="sub-title">Welcome to Dom</h2>
+    <h1 id="title">Elements selectors</h1>
+    <h2>class selectors</h2>
     <p>
-      DOM is a programming interface for HTML and XML documents. It represents
-      the document as objects, that act as the building blocks of the document
+      Elements selectors method used to target and manipulate HTML elements they
+      allow us to select elements based on their tag name
     </p>
+    <li>welocme</li>
+    <li>heloo</li>
+    <li>Youu</li>
     <p id="demo">some</p>
   </body>
 
