--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,13 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 id="title">DOM</h1>
-    <h2 id="sub-title">Welcome to Dom</h2>
-    <p>
-      DOM is a programming interface for HTML and XML documents. It represents
-      the document as objects, that act as the building blocks of the document
+    <title>Object</title>
+    <p id="sub-title">
+      object is a collection of properties and methods that work together to
+      create a new type of data .
     </p>
-    <p id="demo">some</p>
   </body>
 
   <script src="script.js"></script>
