--- a/js_foundation.html
+++ b/js_foundation.html
@@ -15,7 +15,18 @@
     <li>welocme</li>
     <li>heloo</li>
     <li>Youu</li>
+
+    <div class="fun">more fun</div>
+    <div class="fun">okay</div>
+    <div>welcome</div>
     <p id="demo">some</p>
+    <h3>use elements selectors bytagName</h3>
+    <ul>
+      <li>bytagName</li>
+      <li>food</li>
+      <li>driking water</li>
+      <li>you okay?</li>
+    </ul>
   </body>
 
   <script src="script.js"></script>
