--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,6 +6,26 @@
     <title>Document</title>
   </head>
   <body>
-    Welcome to JS!!
+    <h1>hello</h1>
+
+    <ul id="list1">
+      <li id="red">whe</li>
+      <li id="blue">eee</li>
+      <li>terw</li>
+      <li>werewe</li>
+    </ul>
+    <ul id="list2">
+      <li>dsf</li>
+      <li>eesadfae</li>
+      <li>dfa</li>
+      <li>werfsadfewe</li>
+    </ul>
+    <ul id="list3">
+      <li>whsfde</li>
+      <li>esafee</li>
+      <li>terw</li>
+      <li>werfsewe</li>
+    </ul>
   </body>
+  <script src="script.js"></script>
 </html>
