reduce filter method

--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,10 +6,15 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Function</h1>
+    <h1>Array methods</h1>
     <p>
-      Function is a section of the reuseable code that Declear once,use it when
-      ever you want. call the function to execute the code.
+      map – it creates a new array from calling a function iteratively on every
+      array element.
+    </p>
+    <p>
+      filter – this array method creates a new array contained with the elements
+      that are filtered based on the function condition while iterating on the
+      array.
     </p>
   </body>
   <script src="script.js"></script>
