scope-closure: how it works

--- a/js_foundation.html
+++ b/js_foundation.html
@@ -6,11 +6,15 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>asynchronous</h1>
+    <h1>Scope</h1>
     <p>
-      asynchronous is a way to do something at the same time as something else
-      in the background without blocking the main thread of the program or
-      causing it to hang for a long time. It use with promises and async/await.
+      Scope determines where variables and functions can be accessed in your
+      code. There are three main types of scope in JavaScript
+      <ul>
+        <li>Global scope</li>
+        <li>Functions scope</li>
+        <li> Block scope</li>
+      </ul>
     </p>
   </body>
 
